# 2026-Algorithm-Reference-based-Short-Read-Mapping

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/: MEETING_DECISIONS.md
include/: algorithms.hpp  common.hpp
src/: common.cpp  main.cpp
src/algorithms/: hash_seed.cpp  kmp_seed.cpp  native_sliding.cpp  weighted_hash_seed.cpp
